Quick spacing fix

--- a/app/assets/stylesheets/anime-show.css.scss
+++ b/app/assets/stylesheets/anime-show.css.scss
@@ -264,7 +264,7 @@
   .sidebar-ad {
     text-align: center;
     padding-top: 30px;
-    margin-top: 30px;
+    margin-bottom: 15px;
     padding-bottom: 30px;
     background: #e3e3e3;
   }
